--- a/data/ui/LedDialog.ui
+++ b/data/ui/LedDialog.ui
@@ -406,7 +406,7 @@
       </object>
     </child>
     <child type="titlebar">
-      <object class="GtkHeaderBar">
+      <object class="GtkHeaderBar" id="titlebar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
