--- a/data/ui/ButtonDialog.ui
+++ b/data/ui/ButtonDialog.ui
@@ -12,8 +12,8 @@
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
-        <property name="margin-left">12</property>
-        <property name="margin-right">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
         <property name="margin-top">12</property>
         <property name="margin-bottom">12</property>
         <property name="orientation">vertical</property>
@@ -93,8 +93,8 @@
                                   <object class="GtkBox">
                                     <property name="visible">True</property>
                                     <property name="can-focus">False</property>
-                                    <property name="margin-left">6</property>
-                                    <property name="margin-right">6</property>
+                                    <property name="margin-start">6</property>
+                                    <property name="margin-end">6</property>
                                     <property name="margin-top">4</property>
                                     <property name="margin-bottom">4</property>
                                     <child>
@@ -102,7 +102,7 @@
                                         <property name="visible">True</property>
                                         <property name="can-focus">False</property>
                                         <property name="tooltip-text" translatable="yes">The currently set macro</property>
-                                        <property name="margin-left">10</property>
+                                        <property name="margin-start">10</property>
                                         <property name="label" translatable="yes">None</property>
                                         <property name="wrap">True</property>
                                         <property name="max-width-chars">50</property>
