--- a/data/ui/ButtonRow.ui
+++ b/data/ui/ButtonRow.ui
@@ -9,8 +9,8 @@
       <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="margin-left">6</property>
-        <property name="margin-right">6</property>
+        <property name="margin-start">6</property>
+        <property name="margin-end">6</property>
         <property name="margin-top">4</property>
         <property name="margin-bottom">4</property>
         <property name="spacing">18</property>
