--- a/data/ui/DeviceRow.ui
+++ b/data/ui/DeviceRow.ui
@@ -7,8 +7,8 @@
     <child>
       <object class="GtkBox">
         <property name="can-focus">False</property>
-        <property name="margin-left">6</property>
-        <property name="margin-right">6</property>
+        <property name="margin-start">6</property>
+        <property name="margin-end">6</property>
         <child>
           <object class="GtkImage" id="image">
             <property name="visible">True</property>
