--- a/data/ui/OptionButton.ui
+++ b/data/ui/OptionButton.ui
@@ -28,8 +28,8 @@
           <object class="GtkSeparator">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="margin-left">6</property>
-            <property name="margin-right">6</property>
+            <property name="margin-start">6</property>
+            <property name="margin-end">6</property>
             <property name="orientation">vertical</property>
           </object>
           <packing>
