--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -84,8 +84,8 @@
                   <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="margin-left">6</property>
-                    <property name="margin-right">6</property>
+                    <property name="margin-start">6</property>
+                    <property name="margin-end">6</property>
                     <property name="margin-top">6</property>
                     <property name="margin-bottom">6</property>
                     <property name="spacing">6</property>
@@ -99,7 +99,7 @@
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
                         <property name="tooltip-text" translatable="yes">Disable this resolution</property>
-                        <property name="margin-left">6</property>
+                        <property name="margin-start">6</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -115,7 +115,7 @@
                         <property name="can-focus">True</property>
                         <property name="receives-default">True</property>
                         <property name="tooltip-text" translatable="yes">Set this resolution as active</property>
-                        <property name="margin-right">6</property>
+                        <property name="margin-end">6</property>
                         <signal name="clicked" handler="_on_active_button_clicked" swapped="no"/>
                       </object>
                       <packing>
