--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -17,11 +17,20 @@
             <property name="border-width">12</property>
             <property name="spacing">6</property>
             <child>
+              <object class="GtkEntry" id="dpi_entry">
+                <property name="visible">True</property>
+                <property name="halign">start</property>
+                <property name="width-chars">5</property>
+                <signal name="activate" handler="_on_dpi_entry_activate" swapped="no"/>
+                <signal name="insert-text" handler="_on_insert_dpi_entry_text" swapped="no"/>
+              </object>
+            </child>
+            <child>
               <object class="GtkLabel" id="dpi_label">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="halign">start</property>
-                <property name="label">0 DPI</property>
+                <property name="label">DPI</property>
               </object>
               <packing>
                 <property name="expand">True</property>
